assets/css/style.css
/* ... */
#footer-bottom .social-icon {
    margin-right: 1.5em;
}

#footer-bottom .social-icon img {
    filter: drop-shadow(5px 5px 5px #000);
}

/* End Footer Section */

/* Tablet Portrait Styles */

@media only screen and (min-width: 600px) {

/* Tablet - General Layout */
section[id^="parallax"] {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;  
}

section, #footer-top {
    display: flex;
    flex-direction: row;
    justify-content: center; 
    column-gap: 3.5em;
}

#services {
    column-gap: 1.5em;
    row-gap: 3.5em;
}

#footer-top {   
    align-items: flex-start;
}

header, section {
    padding: 3.5em 5em;
}

footer {
    padding: 3.5em 0 1.5em 0;
}

#hero {
    border-bottom: none;
}

#client-logos-container, #footer-links {
    border-top: none;
}

/*  Tablet - Hero, Testimonial, Contact, Footer Divs Multi Column Section Widths */

#hero-text-container, #hero > div, #about-container, #about-image-outer, #logo-tagline, #footer-links {
    flex: 1 1 40%;
    margin: auto;
}

#footer-links {
    padding: 0;
    margin: 0 auto;
}

#hero-image {
    text-align: center;
}

#hero-text-container, #hero-text-container, #about-container, #about-image-outer {
    text-align: left;
}

#contact {
    flex-direction: row-reverse;
    justify-content: center;
    align-items: flex-start;
}

#connect-container, .form-container {
    text-align: left;
    margin: 0 auto;
    align-items: flex-start;
}

.form-container {
    flex: 1 0 280px;
    padding: 2em;
}

#connect-container {
    flex: 2 2 40%;
    padding: 2em;
}

/* Tablet - Client Logos & Testimonial Single Column Section Widths */

#client-logos-inner, .testimonials-container {
    width: 80%;
}
/* Tablet - End Client Logos & Testimonial Single Column Section Widths */

/* Tablet - Service Section */
#service2 {
    margin: 0;
}
/* Tablet - End Service Section */

/* Tablet - About Section */
#about-container, #about-image-outer {
    width: 40%;
}
/* Tablet - End About Section */

/* Tablet - Footer Section */
#footer-links li {
    display: inline;
    margin-right: 20px;
}
/* Tablet - End Footer Section */

}

/* Small Screens and Laptop Styles */

@media only screen and (min-width: 768px) {

header, section {
    padding: 3.5em 7.5em;
}


#client-logos-container {
    padding: 0em 10em 3.5em 10em;
}

/* Fonts */
h1 {
    font-size: 1.75em;
}

h2 {
    font-size: 1.5em;   
}
    
}

/* Desktop and Landscape Tablet Styles */

@media only screen and (min-width: 1024px) {

/* Navigation Menu  */

.menu-items {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    margin: 0;
    padding: 0;
    align-items: center;
}

.menu-button-container {
    display: none;
}

.menu-items > li:not(:last-child) {
    border-bottom: 1px solid #444;
}
.menu-items > li {
    margin: 0 1rem;
    overflow: hidden;
}

#menu-toggle ~ .menu-items li {
    display: list-item;
    height:auto;
    margin: 0;
    padding: 0.5em;
    width: auto;
    color: #fff;
    background-color: transparent;
}

/* End Navigation Menu  */

header, section {
    padding: 3.5em 10em;
}

#client-logos-container {
    padding: 0em 10em 3.5em 10em;
}

h1 {
    font-size: 3em;
}

h2 {
    font-size: 2em;   
}
   
}

